# cosyterm

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: automation.md  philosophy.md  recovery.md  safety.md
src/cosyterm/: __init__.py  cli.py  core.py  restore.py  wizard.py
src/cosyterm/scripts/: setup.sh
tests/: conftest.py  test_cosyterm.py  test_env_driven_choices.py  test_plan_mode.py  test_restore_nvim.py  test_setup_sh_syntax.py  test_wizard.py
tests/fakebin/: apt-get  brew  curl  git  nvim  sudo
tests/fixtures/nvim_custom/dot_config_nvim/: init.lua
tests/fixtures/nvim_custom/dot_config_nvim/lua/: my_own_config.lua
tests/fixtures/nvim_lazyvim/dot_config_nvim/: init.lua  lazy-lock.json
tests/fixtures/nvim_lazyvim/dot_config_nvim/lua/config/: lazy.lua
tests/fixtures/nvim_lazyvim/dot_local_share_nvim/lazy/tokyonight.nvim/plugin/: tokyonight.vim
tests/fixtures/nvim_lazyvim/dot_local_state_nvim/shada/: main.shada
